--- a/14. Proyecto final/app/public/index.html
+++ b/14. Proyecto final/app/public/index.html
@@ -1,25 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="css/main.css">
-</head>
-<body>
-    <nav>
-        <ul>
-            <li><button id="new-board-button">+Add new board</button></li>
-        </ul>
-    </nav>
-    <div id="container">
-        
-    </div>
 
-    <script src="js/bundle.js" type="module"></script>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Document</title>
+        <link rel="stylesheet" href="css/main.css">
+    </head>
 
-    <script>
+    <body>
+        <nav>
+            <ul>
+                <li><button id="new-board-button">+Add new board</button></li>
+            </ul>
+        </nav>
+        <div id="container">
 
-    </script>
-</body>
+        </div>
+
+        <script src="../src/app.js" type="module"></script>
+    </body>
+
 </html>
